NetBSD Problem Report #46120

From www@NetBSD.org  Thu Mar  1 10:42:43 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 8E02D63E17F
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  1 Mar 2012 10:42:43 +0000 (UTC)
Message-Id: <20120301104242.EDC8963DFD4@www.NetBSD.org>
Date: Thu,  1 Mar 2012 10:42:42 +0000 (UTC)
From: ad@netbsd.org
Reply-To: ad@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: audiomp: dev/bluetooth/btsco.c locking error
X-Send-Pr-Version: www-1.0


>Number:         46120
>Category:       kern
>Synopsis:       audiomp: dev/bluetooth/btsco.c locking error
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    mrg
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 01 10:45:00 +0000 2012
>Closed-Date:    Mon Mar 26 07:00:03 +0000 2012
>Last-Modified:  Mon Apr 09 17:55:01 +0000 2012
>Originator:     Andrew Doran
>Release:        -current
>Organization:
The NetBSD Project
>Environment:
N/A
>Description:
    283 static void
    284 btsco_attach(device_t parent, device_t self, void *aux)
...
    298 	mutex_init(&sc->sc_intr_lock, MUTEX_DEFAULT, IPL_NONE);

   
Note IPL_NONE.


    435 static void
    436 btsco_sco_disconnected(void *arg, int err)
...
    461 		mutex_spin_enter(&sc->sc_intr_lock);


And other cases using mutex_spin_.. fastpath.  Should be mutex_enter().




>How-To-Repeat:
Code inspection.
>Fix:
Obvious.


>Release-Note:


>Audit-Trail:


Responsible-Changed-From-To: kern-bug-people->mrg
Responsible-Changed-By: mrg@NetBSD.org
Responsible-Changed-When: Wed, 21 Mar 2012 00:37:54 +0000
Responsible-Changed-Why:
i'll take a look unless iain beats me to it.




From: "matthew green" <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46120 CVS commit: src/sys/dev/bluetooth
Date: Mon, 26 Mar 2012 06:49:17 +0000


 Module Name:	src
 Committed By:	mrg
 Date:		Mon Mar 26 06:49:16 UTC 2012

 
 Modified Files:
 	src/sys/dev/bluetooth: btsco.c

 
 Log Message:
 don't use mutex_spin*() on an IPL_NONE mutex.  fixes PR#46120.

 

 
 To generate a diff of this commit:
 cvs rdiff -u -r1.26 -r1.27 src/sys/dev/bluetooth/btsco.c

 
 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

 
State-Changed-From-To: open->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Mon, 26 Mar 2012 07:00:03 +0000
State-Changed-Why:
obvious indeed. thanks.




From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46120 CVS commit: [netbsd-6] src/sys/dev/bluetooth
Date: Mon, 9 Apr 2012 17:51:45 +0000


 Module Name:	src
 Committed By:	riz
 Date:		Mon Apr  9 17:51:45 UTC 2012

 
 Modified Files:
 	src/sys/dev/bluetooth [netbsd-6]: btsco.c

 
 Log Message:
 Pull up following revision(s) (requested by mrg in ticket #165):
 	sys/dev/bluetooth/btsco.c: revision 1.27
 don't use mutex_spin*() on an IPL_NONE mutex.  fixes PR#46120.

 

 
 To generate a diff of this commit:
 cvs rdiff -u -r1.26.2.1 -r1.26.2.2 src/sys/dev/bluetooth/btsco.c

 
 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

 
>Unformatted:

 



NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.36 2007/11/24 03:27:39 kano Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.