don't use mutex_spin*() on an IPL_NONE mutex.  fixes PR#46120.